k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: asguard-svc
spec:
  type: NodePort
  selector:
    app: asguard-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
